# iot-monitoring-system

./: .gitignore  CLAUDE.md  Doxyfile  LICENSE  README.md  platformio.ini
backend/: .env.example  CLAUDE.md  Dockerfile  docker-compose.yml  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/app/api/v1/: alerts.py  auth.py  dashboard.py  devices.py  readings.py  router.py
backend/app/core/: database.py  dependencies.py  security.py
backend/app/models/: alert.py  device.py  reading.py
backend/app/schemas/: alert.py  common.py  device.py  reading.py
backend/app/services/: alert_service.py  auth_service.py  device_service.py  reading_service.py
backend/app/workers/: alert_processor.py  celery_app.py
backend/tests/: conftest.py  test_alerts.py  test_auth.py  test_dashboard.py  test_devices.py  test_readings.py
docs/: lessons_learned.md  serial-protocol.md
docs/manual/: stack_overflow_debugging.md
embedded/: CLAUDE.md  platformio.ini
embedded/include/: types.h
embedded/src/: main.cpp
include/: bh1750.h  dht22.h  drv_bh1750.h  drv_dht22.h  drv_pir.h  pir.h  shared.h  types.h
src/: main.cpp
src/config/: pins.h
src/drivers/: bh1750.cpp  dht22.cpp  pir.cpp
src/tasks/: task_dht22.cpp  task_environment.cpp  task_serial.cpp
